[build-system]
requires = [
    "poetry-core >=1.8,<2",
    "numpy >= 1.24",
    "cython >= 3.0",
    "setuptools",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true


[tool.poetry]
authors = ["pylibjpeg-libjpeg contributors"]
classifiers=[
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries",
]
description = """\
    A Python framework for decoding JPEG and decoding/encoding DICOM\
    RLE data, with a focus on supporting pydicom\
"""
homepage = "https://github.com/pydicom/pylibjpeg-openjpeg"
include = [
    "libjpeg/src/*",
    {path = "*.so", format= "wheel"},
]
exclude = [
    "libjpeg/src/config.log",
    "libjpeg/src/config.status",
]
keywords = ["dicom pydicom python jpg jpeg jpg-ls jpeg-ls libjpeg pylibjpeg"]
license = "GPL V3.0"
maintainers = ["scaramallion <scaramallion@users.noreply.github.com>"]
name = "libjpeg"
readme = "README.md"
version = "2.0.0.dev0"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24"

# Optional dependencies
black = { version = "^23.1", optional = true }
coverage = { version = "^7.3", optional = true }
mypy = { version = "^1.7", optional = true }
pytest = { version = "^7.4", optional = true }
pytest-cov = { version = "^4.1", optional = true }
pylibjpeg-data = { git = "https://github.com/pydicom/pylibjpeg-data.git"}

[tool.poetry.extras]
dev = ["black", "coverage", "mypy", "pytest", "pytest-cov"]
tests = ["coverage", "pytest", "pytest-cov", "pylibjpeg-data"]

[tool.poetry.plugins."pylibjpeg.jpeg_decoders"]
openjpeg = "libjpeg:decode"

[tool.poetry.plugins."pylibjpeg.jpeg_ls_decoders"]
openjpeg = "libjpeg:decode"

[tool.poetry.plugins."pylibjpeg.jpeg_xt_decoders"]
openjpeg = "libjpeg:decode"

[tool.poetry.plugins."pylibjpeg.pixel_data_decoders"]
"1.2.840.10008.1.2.4.50" = "libjpeg:decode_pixel_data"
"1.2.840.10008.1.2.4.51" = "libjpeg:decode_pixel_data"
"1.2.840.10008.1.2.4.57" = "libjpeg:decode_pixel_data"
"1.2.840.10008.1.2.4.70" = "libjpeg:decode_pixel_data"
"1.2.840.10008.1.2.4.80" = "libjpeg:decode_pixel_data"
"1.2.840.10008.1.2.4.81" = "libjpeg:decode_pixel_data"


[tool.coverage.run]
omit = [
    "libjpeg/tests/*",
]

[tool.mypy]
python_version = "3.8"
files = "libjpeg"
exclude = ["libjpeg/tests"]
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = false
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
